--- a/2_2_basic_typography.html
+++ b/2_2_basic_typography.html
@@ -88,12 +88,12 @@
     <!--####################START HERE######################-->
 
     <!-- HEADINGS -->
-    <h1>Heading One</h1>
-    <h2>Heading Two</h2>
-    <h3>Heading Three</h3>
-    <h4>Heading Four</h4>
-    <h5 class='h2'>Heading Five</h5>
-    <h6>Heading Six</h6>
+    <h1 class='h1'>Heading One</h1>
+    <h2 class='h2'>Heading Two</h2>
+    <h3 class='h3'>Heading Three</h3>
+    <h4 class='h4'>Heading Four</h4>
+    <h5 class='h5'>Heading Five</h5>
+    <h6 class='h6'>Heading Six</h6>
 
     <br>
     <br>
