--- a/3_2_buttons.html
+++ b/3_2_buttons.html
@@ -90,59 +90,59 @@
         <!--################START HERE################-->
 
         <!-- BUTTONS -->
-        <button type="button">Primary</button>
-        <button type="button">Secondary</button>
-        <button type="button">Success</button>
-        <button type="button">Info</button>
-        <button type="button">Warning</button>
-        <button type="button">Danger</button>
-        <button type="button">Light</button>
-        <button type="button">Dark</button>
-        <button type="button">Link</button>
+        <button class="btn btn-primary" type="button">Primary</button>
+        <button class="btn btn-secondary" type="button">Secondary</button>
+        <button class="btn btn-success" type="button">Success</button>
+        <button class="btn btn-info" type="button">Info</button>
+        <button class="btn btn-warning" type="button">Warning</button>
+        <button class="btn btn-danger" type="button">Danger</button>
+        <button class="btn btn-light" type="button">Light</button>
+        <button class="btn btn-dark" type="button">Dark</button>
+        <button class="btn btn-link" type="button">Link</button>
 
         <br>
         <br>
 
         <!-- BUTTON TAGS/TYPES -->
-        <a href="#" role="button">Link</a>
-        <button type="submit">Button</button>
-        <input type="button" value="Input">
-        <input type="submit" value="Submit">
-        <input type="reset" value="Reset">
+        <a class="btn btn-primary" href="#" role="button">Link</a>
+        <button class="btn btn-success" type="submit">Button</button>
+        <input class="btn btn-light" type="button" value="Input">
+        <input class="btn btn-warning" type="submit" value="Submit">
+        <input class="btn btn-info" type="reset" value="Reset">
 
         <br>
         <br>
 
         <!-- OUTLINE BUTTONS -->
-        <button type="button">Primary Outline</button>
-        <button type="button">Secondary Outline</button>
-        <button type="button">Success Outline</button>
-        <button type="button">Info Outline</button>
-        <button type="button">Warning Outline</button>
-        <button type="button">Danger Outline</button>
-        <button type="button">Light Outline</button>
-        <button type="button">Dark Outline</button>
+        <button class="btn btn-outline-primary" type="button">Primary Outline</button>
+        <button class="btn btn-outline-secondary" type="button">Secondary Outline</button>
+        <button class="btn btn-outline-success" type="button">Success Outline</button>
+        <button class="btn btn-outline-info" type="button">Info Outline</button>
+        <button class="btn btn-outline-warning" type="button">Warning Outline</button>
+        <button class="btn btn-outline-danger" type="button">Danger Outline</button>
+        <button class="btn btn-outline-light" type="button">Light Outline</button>
+        <button class="btn btn-outline-dark" type="button">Dark Outline</button>
 
         <br>
         <br>
 
         <!-- BUTTON SIZES -->
-        <button type="button">
+        <button class="btn btn-primary btn-lg" type="button">
             <i class="fa fa-user"></i> Large button</button>
-        <button type="button">Small button</button>
+        <button class="btn btn-success btn-sm" type="button">Small button</button>
         <br>
         <br>
-        <button type="button">Block level button</button>
+        <button class="btn btn-dark btn-block" type="button">Block level button</button>
 
         <br>
         <br>
 
         <!-- STATES -->
-        <button type="button">Regular Button</button>
-        <button type="button">Active Button</button>
-        <button type="button">Disabled Button</button>
+        <button class="btn btn-primary" type="button">Regular Button</button>
+        <button class="btn btn-primary active" type="button">Active Button</button>
+        <button class="btn btn-primary disabled" type="button">Disabled Button</button>
 
-        <button type="button">
+        <button class="btn btn-primary" type="button" data-toggle="button">
             Toggle State
         </button>
 
