--- a/3_2_buttons.html
+++ b/3_2_buttons.html
@@ -150,29 +150,29 @@
         <br>
 
         <!-- BUTTON GROUPS -->
-        <div>
-            <button type="button">Left</button>
-            <button type="button">Middle</button>
-            <button type="button">Right</button>
+        <div class="btn-group">
+            <button class="btn btn-primary" type="button">Left</button>
+            <button class="btn btn-secondary" type="button">Middle</button>
+            <button class="btn btn-primary" type="button">Right</button>
         </div>
 
         <br></br>
 
         <!-- BUTTON TOOLBAR -->
-        <div>
-            <div>
-                <button type="button">1</button>
-                <button type="button">2</button>
-                <button type="button">3</button>
-                <button type="button">4</button>
+        <div class="btn-toolbar">
+            <div class="btn-group mr-2">
+                <button class="btn btn-primary" type="button">1</button>
+                <button class="btn btn-primary" type="button">2</button>
+                <button class="btn btn-primary" type="button">3</button>
+                <button class="btn btn-primary" type="button">4</button>
             </div>
-            <div>
-                <button type="button">5</button>
-                <button type="button">6</button>
-                <button type="button">7</button>
+            <div class="btn-group mr-2">
+                <button class="btn btn-success" type="button">5</button>
+                <button class="btn btn-success" type="button">6</button>
+                <button class="btn btn-success" type="button">7</button>
             </div>
-            <div>
-                <button type="button">8</button>
+            <div class="btn-group">
+                <button class="btn btn-danger" type="button">8</button>
             </div>
         </div>
 
@@ -180,24 +180,24 @@
         <br>
 
         <!-- VERTICAL GROUP -->
-        <div>
-            <button type="button">Left</button>
-            <button type="button">Middle</button>
-            <button type="button">Right</button>
+        <div class="btn-group-vertical">
+            <button class="btn btn-primary" type="button">Top</button>
+            <button class="btn btn-primary" type="button">Middle</button>
+            <button class="btn btn-primary" type="button">Bottom</button>
         </div>
 
         <br>
         <br>
 
         <!-- BUTTON DROPDOWNS -->
-        <div>
-            <button type="button">
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
                 My Dropdown
             </button>
-            <div>
-                <a href="#">Link One</a>
-                <a href="#">Link Two</a>
-                <a href="#">Link Three</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Link One</a>
+                <a class="dropdown-item" href="#">Link Two</a>
+                <a class="dropdown-item" href="#">Link Three</a>
             </div>
         </div>
 
@@ -205,17 +205,16 @@
         <br>
 
         <!-- SPLIT DROPDOWNS -->
-        <div>
-            <button type="button">My Button</button>
-            <button type="button">
+        <div class="btn-group">
+            <button class="btn btn-primary" type="button">My Button</button>
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">
                 <span>Toggle Dropdown</span>
             </button>
-            <div>
-                <a href="#">Link One</a>
-                <a href="#">Link Two</a>
-                <a href="#">Link Three</a>
-                <div></div>
-                <a href="#">Link Four</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Link One</a>
+                <a class="dropdown-item" href="#">Link Two</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Link Three</a>
             </div>
         </div>
 
